<resources>
    <string name="app_name">Weather</string>
    <string name="earth">Earth</string>
    <string name="date">today</string>
    <string name="degree">23</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="cur">Current</string>
    <string name="loc">Location</string>
    <string name="new_york">New York</string>
    <string name="tokyo">Tokyo</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity :</string>
    <string name="wind">Wind: </string>
</resources>
