<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_business_black_24dp"
                />
            <TextView style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_location"/>
        </LinearLayout>
        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/today_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degrees"
            android:textSize="100sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_main"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20dp"/>
        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidity"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textSize="20dp"/>
        <TextView style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind"
            android:textSize="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="fill_horizontal"
            android:background="@color/backBot">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_london"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_united_kingdom"
                    android:background="@color/backBot"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/london"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_paris"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_france"
                    android:background="@color/backBot"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/paris"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_corrent"
                    android:src="@drawable/ic_russia"
                    android:background="@color/backBot"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cur"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loc"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_ny"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_united_states"
                    android:background="@color/backBot"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_york"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/button_tokyo"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_japan"
                    android:background="@color/backBot"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tokyo"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>